tests/NormalTests/paczka1/small_fuzzy/90317009.err
Error in line 1: f66xxK S601 21,8
Error in line 12: iHGWFF4J A88 85,2
